--- a/package.json
+++ b/package.json
@@ -1,25 +1,39 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "expo": "~42.0.1",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "typescript": "~4.0.0"
-  },
-  "private": true
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web",
+		"eject": "expo eject"
+	},
+	"dependencies": {
+		"@react-navigation/native": "^6.0.2",
+		"@react-navigation/native-stack": "^6.1.0",
+		"expo": "~42.0.1",
+		"expo-linear-gradient": "^9.2.0",
+		"expo-status-bar": "~1.0.4",
+		"native-base": "^3.1.0",
+		"react": "16.13.1",
+		"react-dom": "16.13.1",
+		"react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+		"react-native-appearance": "~0.3.3",
+		"react-native-feather": "^1.1.2",
+		"react-native-navigation-bar-color": "^2.0.1",
+		"react-native-safe-area-context": "3.2.0",
+		"react-native-screens": "~3.4.0",
+		"react-native-super-grid": "^4.1.3",
+		"react-native-svg": "^12.1.1",
+		"react-native-tailwind": "^1.0.10",
+		"react-native-web": "~0.13.12",
+		"styled-components": "^5.3.1",
+		"styled-system": "^5.1.5"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.9.0",
+		"@types/react": "~16.9.35",
+		"@types/react-native": "~0.63.2",
+		"typescript": "~4.0.0"
+	},
+	"private": true
 }
