--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
 	"dependencies": {
 		"@react-navigation/native": "^6.0.2",
 		"@react-navigation/native-stack": "^6.1.0",
+		"browserify": "^17.0.0",
+		"debug": "^4.3.2",
 		"expo": "~42.0.1",
 		"expo-linear-gradient": "^9.2.0",
+		"expo-secure-store": "~10.2.0",
 		"expo-status-bar": "~1.0.4",
 		"native-base": "^3.1.0",
 		"react": "16.13.1",
@@ -26,6 +29,7 @@
 		"react-native-svg": "^12.1.1",
 		"react-native-tailwind": "^1.0.10",
 		"react-native-web": "~0.13.12",
+		"stream": "^0.0.2",
 		"styled-components": "^5.3.1",
 		"styled-system": "^5.1.5"
 	},
