--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@react-navigation/native": "^6.0.2",
 		"@react-navigation/native-stack": "^6.1.0",
+		"axios": "^0.22.0",
 		"browserify": "^17.0.0",
 		"debug": "^4.3.2",
 		"expo": "~42.0.1",
